# doom-esp-with-arduino

./: .gitignore  CHANGES_SUMMARY.md  CMakeLists.txt  COMPLETION_SUMMARY.txt  DOCUMENTATION_INDEX.md  LICENSE  README.md  UART_INPUT_SETUP.md  partitions.csv  sdkconfig  sdkconfig.old
arduino/main/: main.ino
arduino/scripts/: compile-and-upload.sh  upload.sh
components/esp32-doom/: CMakeLists.txt  display.c  entities.c  esp32-doom.c  idf_component.yml  input.c  sound.c  sound_data.c  types.c
components/esp32-doom/include/: constants.h  display.h  entities.h  esp32-doom.h  game_constants.h  input.h  level.h  sound.h  types.h  uart_control.h
components/prboom/: CMakeLists.txt  d_main.c  g_game.c  i_system.h  info.c  lprintf.c  p_checksum.c  r_demo.c  tables.c  w_wad.c  wi_stuff.c  z_zone.c
components/prboom-esp32-compat/: CMakeLists.txt  Kconfig.projbuild  i_joystick.c  i_main.c  i_sound.c  i_system.c  i_video.c  spi_lcd.c
components/prboom-wad-tables/: CMakeLists.txt
esp32/: CODE_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README_ESP32_CHANGES.md  auth.cpp  auth.h  constants.h  doom-nano-brutality.ino  input.cpp  sdcard.cpp  sdcard.h
main/: CMakeLists.txt  app_main.c  uart_control.c
